Updates from Overleaf

--- a/tex/appendix.tex
+++ b/tex/appendix.tex
@@ -11,7 +11,7 @@ The code and results from this thesis  have been made available as open source o
 Furthermore, a Github webpage provides video visualisations from some of the results at \url{https://sagerpascal.github.io/lateral-connections/results/final_results.html}.
 \figref{qr_links} makes these links available as QR codes so that they can easily be accessed with electronic devices.
 
-\section{Video}\chlbl{result_video}
+\section{Video}\seclbl{result_video}
 %
 \begin{figure}[h]
     \centering
